# co_scientist

./: README.md  pyproject.toml  run.py
ai_coscientist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
coscientist/: agents.py  graph_app.py  prompts.py  state.py  tools.py  tournament.py
